--- a/src/styles/_sprite.scss
+++ b/src/styles/_sprite.scss
@@ -5,7 +5,83 @@
 	fill: currentColor;
 }
 
-.icon-icon-mouse {
-	font-size:(44.8/10)*1rem;
-	width:(29/44.8)*1em;
+.icon-icon-arrow-with-dot {
+	font-size:(8/10)*1rem;
+	width:(19/8)*1em;
+}
+.icon-icon-attention {
+	font-size:(15/10)*1rem;
+	width:(16/15)*1em;
+}
+.icon-icon-btc {
+	font-size:(28/10)*1rem;
+	width:(28/28)*1em;
+}
+.icon-icon-btc-without-border {
+	font-size:(13/10)*1rem;
+	width:(11/13)*1em;
+}
+.icon-icon-cant-connect {
+	font-size:(46/10)*1rem;
+	width:(81/46)*1em;
+}
+.icon-icon-cant-connect-refresh {
+	font-size:(51/10)*1rem;
+	width:(84/51)*1em;
+}
+.icon-icon-connecting {
+	font-size:(42/10)*1rem;
+	width:(79/42)*1em;
+}
+.icon-icon-continue {
+	font-size:(16/10)*1rem;
+	width:(16/16)*1em;
+}
+.icon-icon-dots {
+	font-size:(6/10)*1rem;
+	width:(23/6)*1em;
+}
+.icon-icon-email {
+	font-size:(10/10)*1rem;
+	width:(15/10)*1em;
+}
+.icon-icon-etherium {
+	font-size:(28/10)*1rem;
+	width:(28/28)*1em;
+}
+.icon-icon-key {
+	font-size:(15/10)*1rem;
+	width:(15/15)*1em;
+}
+.icon-icon-lock {
+	font-size:(16/10)*1rem;
+	width:(14/16)*1em;
+}
+.icon-icon-refresh {
+	font-size:(59/10)*1rem;
+	width:(62/59)*1em;
+}
+.icon-icon-settings {
+	font-size:(16/10)*1rem;
+	width:(14/16)*1em;
+}
+.icon-icon-sharp {
+	font-size:(28/10)*1rem;
+	width:(28/28)*1em;
+}
+.icon-icon-user {
+	font-size:(14/10)*1rem;
+	width:(15/14)*1em;
+}
+.icon-icon-warning {
+	font-size:(18/10)*1rem;
+	width:(14/18)*1em;
+}
+.icon-logo-small-blue {
+	font-size:(13/10)*1rem;
+	width:(90/13)*1em;
+}
+.icon-logo-with-slogan {
+	font-size:(23/10)*1rem;
+	width:(114/23)*1em;
 }
