--- a/src/views/components/pages.pug
+++ b/src/views/components/pages.pug
@@ -7,7 +7,8 @@ mixin pages
       'loader-fail-restart',
       'loader-fail-restart2',
       'login',
-      'sign-up'
+      'sign-up',
+      'wallet'
     ];
 
   .pages.js-pages
