--- a/src/views/layouts/_login-layout.pug
+++ b/src/views/layouts/_login-layout.pug
@@ -4,8 +4,8 @@ include ../components/button.pug
 
 block append vars
   -
-    footerSlogan = false;
-    bg = 'login';
+    footer.slogan = false;
+    contentBg = 'login-earth';
 
 mixin login-head(title, button={text: '', href: '', iconSrc: '', iconAlt: ''})
   -
