--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,10 @@ $blue-darken: rgb(41, 55, 80);
 $blue-darkest: #0B1B37;
 $blue-superdark: rgba(5, 11, 31, 0.6);
 
+$gray-lightest: #C4C4C4;
+$gray-light: #747474;
 $gray: rgba(153, 206, 255, 0.3);
+
+$green-main: #04D67E;
 
 $red-main: #FB5E5B;
