--- a/src/styles/components/mobile-wrap.scss
+++ b/src/styles/components/mobile-wrap.scss
@@ -2,6 +2,7 @@
   background-color: $blue-darkest;
   display: flex;
   flex-flow: column;
+  overflow: hidden;
   margin-left: auto;
   margin-right: auto;
   max-width: 375px;
