--- a/src/views/common/variables.pug
+++ b/src/views/common/variables.pug
@@ -1,4 +1,7 @@
 -
   var version = '1.0';
   var title = 'Project title';
-  var footerSlogan = true;
+  var footer = {
+    slogan: true
+  }
+  var contentBg = 'earth';
