--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -51,7 +51,7 @@
   $padding: 23px;
   $icon-size: 16px;
 
-  transition: border-color 0.3s ease;
+  transition: border-color 0.3s ease, color 0.3s ease;
   border: $border-width solid #1F77C8;
   border-radius: 50px;
   display: inline-block;
@@ -68,19 +68,21 @@
   &:before,
   &:after {
     content: '';
+    transition: left 0.3s ease, right 0.3s ease, width 0.3s ease;
     position: absolute;
-    left: 0;
     height: $border-width;
     width: 100%;
   }
 
   &:before {
     background-image: linear-gradient(to right, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0) 10%, rgba(255,255,255, 1) 30%, rgba(255,255,255, 1) 50%, rgba(255,255,255, 0.2) 80%, rgba(255,255,255, 0) 100%);
+    left: 0;
     top: -$border-width;
   }
 
   &:after {
     background-image: linear-gradient(to right, rgba(255,255,255, 0) 0%, rgba(255,255,255, 0.4) 80%, rgba(255,255,255, 0) 90%, rgba(255,255,255, 0) 100%);
+    right: 0;
     bottom: -$border-width;
   }
 
@@ -93,6 +95,20 @@
 
     &_icon {
       padding: $padding ($icon-size + 8px) $padding 0;
+    }
+  }
+
+  &:hover {
+    color: white;
+
+    &:before {
+      left: 10%;
+      width: 90%;
+    }
+
+    &:after {
+      right: 10%;
+      width: 90%;
     }
   }
 }
